refactor: ai 냄새 코드 전면 리팩터링
- 미사용 @Slf4j 제거 (JwtIssueFunction, SsePosService, OwnerStoreValidator 등)
- QueryDSL fetchOne() 임시변수를 Optional.ofNullable() 인라인으로 통합
- OrderRepositoryImpl/ReceiptRepositoryImpl 중복 매퍼 체인을 헬퍼로 추출
- TEMPORARY_ORDER 인스턴스 필드를 static final int로 교정
- AuthenticationToHeaderFilter 상수를 static final로 교정
- UserRepositoryImpl createUser/createOwner 중복을 createAndSave 헬퍼로 통합
- OAuthOidcHelper 이중 맵 조회를 지역변수에 캐시
- JwtOidcProvider 불필요 Javadoc 제거 및 Base64 디코더 중복 호출 제거
- StoreMapper.toStoreWithStoreDetailImages를 기존 메서드 위임으로 단순화
- ReviewRepositoryImpl 블록 람다를 메서드 레퍼런스로 교체
- TableRepositoryImpl Optional 이중 래핑 제거
- MenuEntity @Column(nullable = true) 기본값 중복 제거

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>